corpus/literals.txt
==================================================
Reserved Literals
==================================================

true
false
nil

-----

(file
  (expression_statement (true))
  (expression_statement (false))
  (expression_statement (nil)))

==================================================
Strings
==================================================

"This is a string"
"This is a string with \"escaped\" double-quotes"
"This is a string with #{ 5 } interpolation"
'This is a charlist'
'This is a charlist with \'escaped\' single-quotes'
"""
This
is
a
"multiline"
string
"""
'''
This
is
a
'multiline'
charlist
'''

-----

(file
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (string))
  (expression_statement (charlist))
  (expression_statement (charlist))
  (expression_statement (string))
  (expression_statement (charlist)))

==================================================
Integers
==================================================

1
1_000
0X1f
0x1_F
0O10
0o1_0

-----

(file
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer))
  (expression_statement (integer)))

==================================================
Floats
==================================================

1.0
12_34.56_78
12_34.56_78e9_0

-----

(file
  (expression_statement (float))
  (expression_statement (float))
  (expression_statement (float)))

==================================================
Atoms
==================================================

:atom
:this_is_an_atom
:__this_is_still_an_atom!
:ThisIsAnAtom?
is_this_an_atom?:

-----

(file
  (expression_statement (atom))
  (expression_statement (atom))
  (expression_statement (atom))
  (expression_statement (atom))
  (expression_statement (atom)))

==================================================
Sigils
==================================================

~r(test)
~R{test}
~r[test]
~R<test>
~r"test"i
~R'test'bfg
~r|test|a
~R/test/m

-----

(file
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil))
  (expression_statement (sigil)))

==================================================
Lists
==================================================

[]
["foo"]
[1, 2, 3]
[[1, 2, 3], [1, 2, 3]]

-----

(file
  (expression_statement (list))
  (expression_statement (list (string)))
  (expression_statement (list (integer) (integer) (integer)))
  (expression_statement
    (list
      (list (integer) (integer) (integer))
      (list (integer) (integer) (integer)))))
